2006-12-04  Benoit Jacob <jacob@math.jussieu.fr>

	* test/math.cpp: match the Test::Harness output format.
	Geoff, did I get it right this time?

2006-12-03  Benoit Jacob <jacob@math.jussieu.fr>

	* src/math/vector3.h, src/math/matrix3x3.h,
	  src/math/vector3.cpp, src/math/matrix3x3.cpp:
	 --- IMPORTANT: disable floating-point checks and exception-throwing
	     by default. Now that is compiled only if OB_OLD_MATH_CHECKS is
	     defined.
	 --- Fix compilation error on Windows reported by Noel O'Boyle.
	     (another compilation error on Windows remains to be fixed).
	 --- Fix some more methods. Now all the floating-point code
	     should be quite sane.
	 --- Optimize/simplify several more methods.
	 --- add matrix3x3::operator*=( const double &), make operator /=
	     use it.
	 --- remove #define PI, use the standard M_PI instead.
	 --- replace #define SQUARE() by a static inline function.
	 --- remove hyper-dangerous #define x,y,z

	* test/math.cpp: extend tests, merge (an improved version of)
	matrixtest.cpp. Now math.cpp covers all what vector3.cpp and
	matrixtest.cpp did cover, plus a lot more. Geoff: maybe it's time
	to remove the tests vector3 and matrixtest?

        * test/vector3.cpp: fix bugs, if that still matters.

	* src/obutil.h: add note clarifying that to check if x is zero, one
	should use IsNegligible( x, 1.0) instead of IsApprox( x, 0.0 ).

	* src/rotor.cpp, tools/obxyz.cpp: use M_PI instead of PI.

2006-12-02  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* scripts/*: Cleanups and fixes, including for compilation
	problems with Perl. (Derives from some macro expansion for THR.)

2006-12-01  Benoit Jacob <jacob@math.jussieu.fr>

	* src/grid.h, src/grid.cpp: In class OBFloatGrid:
	cleanup and simplifications, minor optimizations, add a FIXME
	comment in operator<< about endianness issues, replace a dangerous
	memset by a for loop. (This memset relied on the fact that the
	floating-point value 0.0 is represented by the bits 0....0, which