@@ -1,7 +1,9 @@
 2006-12-04  Benoit Jacob <jacob@math.jussieu.fr>
 
 	* test/math.cpp: match the Test::Harness output format.
-	Geoff, did I get it right this time?
+
+	* src/obutil.h, src/math/vector3.cpp: revert to using std::min
+	instead of fmin.
 
 2006-12-03  Benoit Jacob <jacob@math.jussieu.fr>
 
